crates/rymx/tests/errors/missing_semi.rym
fn main() Result[(), IoError] => {
    call_some_function(testing, {
        let test = 0;
        test = test + 0 // <<-- Missing semicolon
        test
    });
}
